<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonationRequestCreatFragment">






    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/make_request_Et_name"
                style="@style/make_request"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/make_request_Et_age"
                style="@style/make_request"
                android:layout_below="@+id/make_request_Et_name"
                android:layout_marginTop="@dimen/margin_top1"
                android:hint="@string/age" />


            <EditText
                android:id="@+id/Make_Request_Et_Blood_type"
                style="@style/make_request"
                android:layout_below="@+id/make_request_Et_age"
                android:layout_marginTop="@dimen/margin_top1"
                android:hint="@string/blood" />

            <EditText
                android:id="@+id/Make_Request_Et_Number_of_Blood"
                style="@style/make_request"
                android:layout_below="@+id/Make_Request_Et_Blood_type"
                android:layout_marginTop="@dimen/margin_top1"
                android:hint="@string/number_of_blood" />


            <EditText
                android:id="@+id/Make_Request_Et_Hospital_name"
                style="@style/make_request"
                android:layout_below="@+id/Make_Request_Et_Number_of_Blood"
                android:layout_marginTop="@dimen/margin_top1"
                android:hint="@string/name_of_hospital">

            </EditText>


            <LinearLayout
                android:id="@+id/Make_request_layout_Hospital_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x4_Large"
                android:layout_below="@+id/Make_Request_Et_Hospital_name"
                android:layout_marginStart="@dimen/xlarge"
                android:layout_marginTop="@dimen/margin_top1"
                android:layout_marginEnd="@dimen/xlarge"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/make_request_image_location_Hospital"
                    android:layout_width="@dimen/xxxx_large"
                    android:layout_height="match_parent"
                    android:background="@drawable/shap_lins"
                    android:src="@drawable/ic_location_on_black_24dp"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/Make_Request_tv_Address_of_hospital"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/large"
                    android:background="@drawable/shap_lins"
                    android:hint="@string/address_of_hospital"
                    android:padding="@dimen/small"
                    android:paddingEnd="@dimen/medium"
                    android:textColor="@color/text_color"
                    tools:ignore="TextFields" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/Make_Request_layout_cantry"
                style="@style/make_request"
                android:layout_below="@+id/Make_request_layout_Hospital_address"
                android:layout_marginTop="@dimen/margin_top1"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/MAke_Request_Spinner_Cantry"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </Spinner>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/Make_Request_layout_cities"
                style="@style/make_request"
                android:layout_below="@+id/Make_Request_layout_cantry"
                android:layout_marginTop="@dimen/margin_top1"
                android:orientation="horizontal"

                >

                <Spinner
                    android:id="@+id/Make_Request_Spinner_Cities"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </Spinner>


            </LinearLayout>

            <EditText
                android:id="@+id/Make_Request_Et_Phone_Number"
                style="@style/make_request"
                android:layout_below="@+id/Make_Request_layout_cities"
                android:layout_marginTop="@dimen/margin_top1"
                android:hint="@string/phone_number_tv" />


            <EditText
                android:id="@+id/Request_notes_Tv"
                style="@style/make_request"
                android:layout_height="@dimen/hd2"
                android:layout_below="@+id/Make_Request_Et_Phone_Number"
                android:layout_marginTop="@dimen/margin_top1"
                android:hint="@string/notes" />

            <Button
                android:id="@+id/Make_Request_btn_send_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Request_notes_Tv"
                android:layout_margin="@dimen/large"
                android:background="@color/sgin_up"
                android:text="@string/send_request"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>